--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div id="root">
-            it doesn't f*ckin' work!!!
+            it doesn't f*ckin' work!!! tsk tsk
         </div>
     </body>
     <script src="./js/bundle.js"></script>
