--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,5 @@
             it doesn't f*ckin' work!!! tsk tsk
         </div>
     </body>
-    <script src="./js/bundle.js"></script>
+    <script src="js/bundle.js"></script>
 </html>
